renomeia todos os métodos
